r8168 (8.049.02-1) UNRELEASED; urgency=medium

  * New upstream release 8.049.02 (2021-06-30).  (Closes: #992284)

 -- Andreas Beckmann <anbe@debian.org>  Mon, 27 Sep 2021 20:53:46 +0200

r8168 (8.048.03-3) unstable; urgency=medium

  * Switch to dh-sequence-dkms.

 -- Andreas Beckmann <anbe@debian.org>  Mon, 15 Feb 2021 16:08:14 +0100

r8168 (8.048.03-2) unstable; urgency=medium

  * d/watch: Parse only the version number from the upstream download page.
  * Bump Standards-Version to 4.5.1 (no changes needed).

 -- Andreas Beckmann <anbe@debian.org>  Thu, 07 Jan 2021 13:46:24 +0100

r8168 (8.048.03-1) unstable; urgency=medium

  * New upstream release 8.048.03 (2020-05-25).
  * Refresh patches.
  * Switch to debhelper-compat (= 13).
  * Use Testsuite: autopkgtest-pkg-dkms.

 -- Andreas Beckmann <anbe@debian.org>  Thu, 04 Jun 2020 09:42:24 +0200

r8168 (8.048.02-1) unstable; urgency=medium

  * New upstream release 8.048.02 (2020-03-19).
  * Bump Standards-Version to 4.5.0 (no changes needed).
  * linux-5.6.patch: New, adapt to Linux 5.6 changes.

 -- Andreas Beckmann <anbe@debian.org>  Thu, 30 Apr 2020 00:06:23 +0200

r8168 (8.048.00-1) unstable; urgency=medium

  * New upstream release 8.048.00 (2020-01-08).

 -- Andreas Beckmann <anbe@debian.org>  Wed, 15 Jan 2020 01:18:32 +0100

r8168 (8.047.05-1) unstable; urgency=medium

  * New upstream release 8.047.05 (2019-11-15).
  * linux-5.4.patch: New, from Ubuntu, fix building the module for Linux 5.4.
    (LP: #1852616)

 -- Andreas Beckmann <anbe@debian.org>  Fri, 22 Nov 2019 13:56:10 +0100

r8168 (8.047.04-1) unstable; urgency=medium

  * New upstream release 8.047.04 (2019-08-02).
  * linux-3.5.patch: New, add fallback for some macros that may be undefined.
  * Bump Standards-Version to 4.4.1 (no changes needed).

 -- Andreas Beckmann <anbe@debian.org>  Tue, 22 Oct 2019 11:05:32 +0200

r8168 (8.047.02-1) unstable; urgency=medium

  * New upstream release 8.047.02 (2019-06-21).
  * Refresh patches.