@@ -3,7 +3,7 @@ Description: MDIO_EEE_1000T and MDIO_EEE_100TX are not defined in some older ker
 
 --- a/src/r8168_n.c
 +++ b/src/r8168_n.c
-@@ -24459,7 +24459,11 @@ rtl8168_init_software_variable(struct ne
+@@ -24018,7 +24018,11 @@ rtl8168_init_software_variable(struct ne
          dev->max_mtu = tp->max_jumbo_frame_size;
  #endif //LINUX_VERSION_CODE >= KERNEL_VERSION(4,10,0)
          tp->eee_enabled = eee_enable;
