@@ -1,6 +1,7 @@
 r8168 (8.049.02-1) UNRELEASED; urgency=medium
 
   * New upstream release 8.049.02 (2021-06-30).  (Closes: #992284)
+  * Refresh patches.
 
  -- Andreas Beckmann <anbe@debian.org>  Mon, 27 Sep 2021 20:53:46 +0200
 
